--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -28,12 +28,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+    #  - name: Login to GitHub Container Registry
+    #    uses: docker/login-action@v3
+    #    with:
+    #      registry: ${{ env.REGISTRY }}
+    #      username: ${{ github.actor }}
+    #      password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract version from package.json
         id: pkg
@@ -50,15 +50,15 @@ jobs:
             type=raw,value=${{ steps.pkg.outputs.version }}
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          platforms: linux/amd64,linux/arm64
-          context: .
-          file: Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+     # - name: Build and push
+     #   uses: docker/build-push-action@v6
+     #   with:
+     #     platforms: linux/amd64,linux/arm64
+     #     context: .
+     #     file: Dockerfile
+     #     push: true
+     #     tags: ${{ steps.meta.outputs.tags }}
+     #     labels: ${{ steps.meta.outputs.labels }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
